//
//
// Tencent is pleased to support the open source community by making tRPC available.
//
// Copyright (C) 2023 Tencent.
// All rights reserved.
//
// If you have downloaded a copy of the tRPC source code from Tencent,
// please note that tRPC source code is licensed under the  Apache 2.0 License,
// A copy of the Apache 2.0 License is included in this file.
//
//

syntax = "proto3";

package trpc.test.testproto;

service TestService {
  rpc PingList (PingRequest) returns (stream PingResponse);
}

message PingRequest {
  string  value               = 1;
  int32   sleep_time_ms       = 2;
  uint32  error_code_returned = 3;
}

message PingResponse {
  string  value   = 1;
  int32   counter = 2;
}